--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ model {
         }
 
         buildTypes {
-            gitUpdateModules()
+            //  gitUpdateModules()
             release {
                 proguardFiles.add(file('proguard-rules.pro'))
                 minifyEnabled = false
@@ -113,6 +113,7 @@ dependencies {
     compile 'com.google.firebase:firebase-crash:10.0.1'
     compile 'com.android.support:animated-vector-drawable:25.3.1'
     compile 'io.sigpipe:jbsdiff:1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     androidTestCompile 'com.android.support:support-v13:25.3.1'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
