--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,6 @@
     <uses-feature
         android:name="android.hardware.location.network"
         android:required="false" />
-
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
@@ -48,8 +47,8 @@
             android:launchMode="singleInstance"
             android:screenOrientation="portrait">
             <intent-filter android:autoVerify="true">
-
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -77,6 +76,7 @@
             android:label="@string/app_name"
             android:launchMode="singleInstance"
             android:screenOrientation="portrait" />
+        <activity android:name=".presenter.activities.SendWalletActivity"></activity>
     </application>
 
 </manifest>
